[package]
name = "solana-hft-ninja"
version = "2025.7.0"
edition = "2021"
authors = ["HFT Ninja Team <team@hftninja.com>"]
description = "Zero-cost Solana High-Frequency Trading Engine"
license = "MIT"
repository = "https://github.com/hftninja/solana-hft-ninja-2025.07"

[[bin]]
name = "hft-ninja"
path = "src/main.rs"



[dependencies]
# Solana
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-logger = "1.18.26"
solana-transaction-status = "1.18.26"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Web3
anchor-client = "0.30"
anchor-lang = "0.30"
anchor-spl = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# WebSocket and HTTP (with rustls for Chainguard compatibility)
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"], default-features = false }
tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"], default-features = false }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
redis = { version = "0.24", features = ["tokio-comp"] }

# Metrics and monitoring
prometheus = "0.14"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
quanta = "0.11"

# Advanced crypto and encoding
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Performance and concurrency
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
bumpalo = "3.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Math
rust_decimal = "1.34"
rust_decimal_macros = "1.34"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Security
uuid = { version = "1.0", features = ["v4"] }

# Utilities
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
once_cell = "1.19"
rand = "0.8"
lazy_static = "1.4"

# Zero-copy and memory
bytemuck = { version = "1.16", features = ["derive"] }
bytes = "1.6"
memmap2 = "0.9"

# Web server for metrics
warp = "0.3"

# Time utilities (already defined above)

# DEX program IDs
spl-token = "4.0"
spl-associated-token-account = "2.3"
spl-memo = "=4.0.0"

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true