[package]
name = "batch_processor"
version = "1.0.0"
edition = "2021"
authors = ["Solana HFT Ninja Team"]
description = "🚀 Batch Processing Engine for Cerebro"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
tracing = { workspace = true }

# Redis for queue management
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Performance
rayon = "1.8"

[dev-dependencies]
tokio-test = "0.4"
