[package]
name = "cache_engine"
version = "1.0.0"
edition = "2021"
authors = ["Solana HFT Ninja Team"]
description = "🗄️ DragonflyDB Cache Engine for Cerebro"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
tracing = { workspace = true }

# Redis/DragonflyDB client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Hashing for cache keys
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
