[package]
name = "feature_engine"
version = "1.0.0"
edition = "2021"
authors = ["Solana HFT Ninja Team"]
description = "⚡ Lazy Feature Extraction Engine for Cerebro"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
tracing = { workspace = true }

# Parallel processing
rayon = "1.8"

# Fast serialization (removed Arrow due to version conflicts)
bincode = "1.3"

# Math and statistics
nalgebra = "0.32"

[dev-dependencies]
tokio-test = "0.4"
