[package]
name = "model_router"
version = "1.0.0"
edition = "2021"
authors = ["Solana HFT Ninja Team"]
description = "⚡ Model Switching Router for Cerebro"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
tracing = { workspace = true }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
