[package]
name = "orchestrator"
version = "1.0.0"
edition = "2021"
authors = ["Solana HFT Ninja Team"]
description = "🚀 Cerebro Orchestrator - Main Binary"

[[bin]]
name = "cerebro-orchestrator"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Local crates
batch_processor = { path = "../batch_processor" }
cache_engine = { path = "../cache_engine" }
prompt_engine = { path = "../prompt_engine" }
model_router = { path = "../model_router" }
feature_engine = { path = "../feature_engine" }

[dev-dependencies]
tokio-test = "0.4"
